fixed position of search bar

--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@
 #navbarRight {
   margin-right: 50px;
 }
+
+#exampleDataList {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+}
